--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
   src: url("../fonts/fontello.eot?37927580#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?37927580") format("woff2"), url("../fonts/fontello.woff?37927580") format("woff"), url("../fonts/fontello.ttf?37927580") format("truetype"), url("../fonts/fontello.svg?37927580#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 [class^="icon-"]:before,
